--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- the header, the thingy that goes on the top? -->
     <h1> Homepage </h1> 
      <!-- the text -->
-    <p> This is my _Insert Project Name_ </p>
+    <p> This is my homepage </p>
   </body>
      <!-- where the javascript goes. -->
     <div id="sketch-holder"> </div>
@@ -47,7 +47,7 @@
             <div id = "divider1">
                 
             <ul id = "seventhHeader">
-              <p>I don't know what to put <br> here</p>
+              <p>Welcome! Click the buttons <br> to go to  each page.</p>
               </div>
       </ul>
           <div><p></p></div>
