--- a/page1index.html
+++ b/page1index.html
@@ -1,9 +1,9 @@
 <html lang="en">
   <head>
-     <script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/p5.js"></script>
+     <script src="p5.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/addons/p5.dom.js"></script>
-    <script src="sketch.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="page1sketch.js"></script>
+    <link rel="stylesheet" type="text/css" href="page1style.css">
     <meta charset="utf-8" />
   </head>
   <body>
