--- a/page1index.html
+++ b/page1index.html
@@ -16,8 +16,8 @@
     <div id="sketch-holder"> </div>
     <nav>
         <ul id = "firstHeader">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Project 1</a>
+          <li><a href="https://peggiez.github.io/mysite/">Home</a></li>
+          <li><a href="https://peggiez.github.io/mysite/page1index.html">Project 1</a>
           </li>
       </ul>
         <ul id = "secondHeader">
