--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav>
         <ul id = "firstHeader">
           <li><a href="https://jzhatchcoding.github.io/peggieTest/">Home</a></li>
-          <li><a href="#">Project 1</a>
+          <li><a href="https://peggiez.github.io/mysite/page1index.html">Project 1</a>
           </li>
       </ul>
         <ul id = "secondHeader">
