--- a/page1index.html
+++ b/page1index.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
      <script src="p5.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/addons/p5.dom.js"></script>
-    <script src="page1sketch.js"></script>
-    <link rel="stylesheet" type="text/css" href="page1style.css">
+    <script src="sketch.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
   </head>
   <body>
@@ -14,9 +15,9 @@
     <p> This is my penguin dive showcase </p>
      <!-- where the javascript goes. -->
     <div id="sketch-holder"> </div>
-    <nav>
+     <nav>
         <ul id = "firstHeader">
-          <li><a href="https://peggiez.github.io/mysite/">Home</a></li>
+          <li><a href="https://jzhatchcoding.github.io/peggieTest/">Home</a></li>
           <li><a href="https://peggiez.github.io/mysite/page1index.html">Project 1</a>
           </li>
       </ul>
@@ -47,11 +48,10 @@
                 
             <ul id = "seventhHeader">
               <p>This is an animation of penguins <br>sliding down a hill to get shrimps.</p>
+              </ul>
               </div>
-      </ul>
           <div><p></p></div>
-        </ul>
-      </nav>
+    </nav>
   </body>
   
 </html>
