--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div id = "divider1">
                 
             <ul id = "seventhHeader">
-              <p>I don't know what to put <br> here</p>
+              <p>Welcome! Click the buttons <br> to go to  each page.</p>
               </ul>
               </div>
           <div><p></p></div>
