--- a/page1index.html
+++ b/page1index.html
@@ -3,7 +3,7 @@
   <head>
      <script src="p5.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/addons/p5.dom.js"></script>
-    <script src="sketch.js"></script>
+    <script src="page1script.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
   </head>
