--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="sketch-holder"> </div>
     <nav>
         <ul id = "firstHeader">
-          <li><a href="https://jzhatchcoding.github.io/peggieTest/">Home</a></li>
+          <li><a href="https://peggiez.github.io/mysite/">Home</a></li>
           <li><a href="https://peggiez.github.io/mysite/page1index.html">Project 1</a>
           </li>
       </ul>
