--- a/page2index.html
+++ b/page2index.html
@@ -26,9 +26,9 @@
       </ul>
       <div>
         <ul id = "thirdHeader">
-          <li><a href="#">Project 2</a>
+          <li><a href="https://peggiez.github.io/mysite/page2index.html">Project 2</a>
           </li>
-          <li><a href="#">Project 3</a></li>
+          <li><a href="https://peggiez.github.io/mysite/page3index.html">Project 3</a></li>
       </ul>
       </div>
           <ul id = "fourthHeader">
@@ -36,8 +36,8 @@
           </ul>
       <div>
           <ul id = "fifthHeader">
-          <li><a href="#">Project 4</a></li>
-          <li><a href="#">Project 5</a>
+          <li><a href="https://peggiez.github.io/mysite/page4index.html">Project 4</a></li>
+          <li><a href="https://peggiez.github.io/mysite/page5index.html">Project 5</a>
           </li>
         </ul>
       </div>
