--- a/index.html
+++ b/index.html
@@ -53,5 +53,6 @@
           <div><p></p></div>
     </nav>
   </body>
-  
+  <footer class="footer"> <p> Link to this site: https://github.com/Peggiez/mysite <br> Link to codepen: https://codepen.io/peggiez/pen/gOGbagv </p>
+      </footer> 
 </html>
